2006-01-01  Raif S. Naffah  <raif@swiftdsl.com.au>

	* java/net/InetAddress.java (getAllByName): use LOCALHOST if
	localhost is null or is an empty string. Trim hostname before
	lookup.

2005-12-31  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* gnu/CORBA/Poa/gnuPOA.java (reference_to_servant): 
	Throw WrongAdapter with explaining message.

2005-12-31  Mark Wielaard  <mark@klomp.org>

	* java/text/Bidi.java (requiresBidi): Also test against character
	types L, EN, ES, ET, AN, CS, S and WS.

2005-12-31  Chris Burdess  <dog@gnu.org>

	* gnu/xml/dom/DomNamedNodeMap.java,
	  gnu/xml/dom/DomNode.java,
	  gnu/xml/dom/ls/SAXEventSink.java,
	  gnu/xml/stream/SAXParser.java,
	  gnu/xml/stream/XMLParser.java: Fix entity reference DOM construction
	  and correct DOM tree normalisation.

2005-12-30  Wolfgang Baer  <WBaer@gmx.de>

	* javax/print/AttributeException.java,
	* javax/print/URIException.java,
	* javax/print/FlavorException.java,
	* javax/print/PrintException.java:
	Added and updated javadocs to class and methods.

2005-12-30  Wolfgang Baer  <WBaer@gmx.de>

	* javax/print/attribute/standard/package.html: Added description.
	* javax/print/attribute/standard/MediaSize.java: 
	Added and updated javadocs to class and methods.
	(static_initializer): Initialize nested class constants.
	(MediaSize): Add instances to the cache.
	(MediaSize): Likewise.
	(MediaSize): Likewise.
	(MediaSize): Likewise.
	(findMedia): New method.
	(equals): Likewise.

2005-12-29  Chris Burdess  <dog@gnu.org>

	* gnu/xml/stream/SAXParser.java,
	  gnu/xml/stream/XMLParser.java: Additional validity constraint
	  checking; parameter entity recognition and replacement checks;
	  checks for xml:space to determine whether whitespace is ignorable;
	  better start- and end-entity event reporting.

2005-12-28  Chris Burdess  <dog@gnu.org>

	* gnu/xml/stream/CRLFReader.java: Fixed bug where pos > 0.
	* gnu/xml/stream/XMLParser.java,
	  gnu/xml/stream/UnicodeReader.java: Use Unicode code points instead